# batch-dynamic-spanning-tree

./: .gitignore  Makefile  README.md  cuda_utility.cu  cuda_utility.cuh  dynamic_spanning_tree.cu  dynamic_tree.cuh  main.cu  to_do
SG_PR_ET/: .gitignore  runner.sh  (+3 more)
v2/: .gitignore  CMakeLists.txt  Makefile
v2/datasets/connected_datasets/: myforestfiregraph.txt
v2/include/: bfs.hpp  cuda_utility.cuh  dynamic_tree_util.cuh  update_ds.cuh
v2/include/PR-RST/: pr_rst_util.cuh  reRoot.cuh  rootedSpanningTreePR.cuh  shortcutting.cuh
v2/include/common/: Timer.hpp  cuda_utility.cuh  graph.hpp
v2/include/connected_components/: cc.cuh
v2/include/cuda_bfs/: cuda_bfs.cuh
v2/include/dynamic_spanning_tree/: dynamic_tree.cuh  dynamic_tree_util.cuh  euler_tour.cuh  list_ranking.cuh  update_ds.cuh
v2/include/pr_rst/: grafting.cuh  pr_rst.cuh  rootedSpanningTreePR.cuh
v2/include/serial_rst/: spanning_tree.hpp
v2/src/: dynamic_tree.cu  dynamic_tree_util.cu  main.cu
v2/src/PR-RST/: grafting.cu  pr_rst_util.cu  reversePaths.cu  rootedSpanningTreePR.cu  shortcutting.cu
v2/src/common/: cuda_utility.cu
v2/src/connected_components/: cc.cu
v2/src/cuda_bfs/: adam_polak.cu  cuda_bfs.cu
v2/src/dynamic_spanning_tree/: dynamic_tree.cu  dynamic_tree_util.cu  euler.cu  path_reversal.cu  update_ds.cu
v2/src/serial_rst/: bfs.cpp  spanning_tree.cpp
v2/src/super_graph/: super_graph.cu
v2/tools/cub_flagged/: cub_flagged.cu
v2/tools/dataset_creation/: dataset_creation.hxx  delete.sh  main.cxx
v2/tools/dfs/: dfs.cpp
v2/tools/edge_adder/: EdgeAdderForConnectivity.cpp
(+982 files in other folders)
